# gateway/src/main/java/ru/practicum/shareit/request/ItemRequestClient.java
@@ -1,0 +1,57 @@
+package ru.practicum.shareit.request;
+
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.http.ResponseEntity;
+import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
+import org.springframework.stereotype.Service;
+import org.springframework.web.util.DefaultUriBuilderFactory;
+import ru.practicum.shareit.client.BaseClient;
+import ru.practicum.shareit.request.dto.ItemRequestDto;
+import ru.practicum.shareit.utility.exceptions.ShareItIvanlidEntity;
+
+import java.util.Map;
+
+@Service
+public class ItemRequestClient extends BaseClient {
+
+    private static final String API_PREFIX = "/requests";
+
+    public ItemRequestClient(@Value("${shareit-server.url}") String serverUrl, RestTemplateBuilder builder) {
+        super(
+                builder
+                        .uriTemplateHandler(new DefaultUriBuilderFactory(serverUrl + API_PREFIX))
+                        .requestFactory(HttpComponentsClientHttpRequestFactory::new)
+                        .build()
+        );
+    }
+
+    public ResponseEntity<Object> createRequest(Long userId, ItemRequestDto dto) {
+        if (dto.getDescription().isBlank()) {
+            throw new ShareItIvanlidEntity("Null fields not allowed");
+        }
+        return post("", userId, dto);
+    }
+
+    public ResponseEntity<Object> getRequest(Long userId, Long requestId) {
+        return get("/" + requestId, userId);
+    }
+
+    public ResponseEntity<Object> getAllRequests(Long userId, int from, int size) {
+        Map<String, Object> parameters = Map.of(
+                "from", from,
+                "size", size
+        );
+        return get("/all?from={from}&size={size}", userId, parameters);
+    }
+
+    public ResponseEntity<Object> getUserRequests(Long userId, int from, int size) {
+        Map<String, Object> parameters = Map.of(
+                "from", from,
+                "size", size
+        );
+        return get("?from={from}&size={size}", userId, parameters);
+    }
+
+
+}
